objects/Quote_Line_Property__c.object
<CustomObject>
    <fields>
        <fullName>ATGExternalID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID for migration purposes</inlineHelpText>
        <label>ATGExternalID__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quote_Line_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAddressSelected__c</fullName>
        <formula>IF(ISBLANK(Billing_Address__c),' ',Billing_Address__r.Account__r.Name+BR()+Billing_Address__r.Assembled_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipName>Quote_Line_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Account_Billing_Address__c</fullName>
        <formula>Account__r.Name+BR()+Account__r.BillingStreet+ BR()+Account__r.BillingCity+', '+Account__r.BillingState+' '+Account__r.BillingPostalCode+BR()+Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Account_Shipping_Address__c</fullName>
        <formula>Account__r.Name+BR()+Account__r.ShippingStreet+ BR()+Account__r.ShippingCity+', '+Account__r.ShippingState+'  '+Account__r.ShippingPostalCode+BR()+Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Account Shippinng Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipName>Quote_Line_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShippingAddressSelected__c</fullName>
        <formula>IF(ISBLANK(Shipping_Address1__c), ' ', Shipping_Address1__r.Account__r.Name+BR()+Shipping_Address1__r.Assembled_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipName>Quote_Line_Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yr1Brand__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr1Brand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr1Property__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr1Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr1Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr1Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr2Brand__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr2Brand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr2Property__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr2Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr2Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr2Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr3Brand__c</fullName>
        <label>Yr3Brand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr3Property__c</fullName>
        <label>Yr3Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr3Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Yr3Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Split Line</label>
    <nameField>
        <displayFormat>QLP-{0}</displayFormat>
        <label>Quote Line Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>